--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css",
+              "src/toastr-custom.css"
             ],
             "scripts": []
           },
